--- a/templates/index.html
+++ b/templates/index.html
@@ -170,8 +170,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Chicago Illinois,
-                            <br>United States</p>
+                        <p>Erding, Bavaria
+                            <br>Germany</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3></h3>
