--- a/templates/index.html
+++ b/templates/index.html
@@ -85,9 +85,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Hey there {{name}}!</h1>
+                        <h1 class="name">Welcome to my humble home {{name}}!</h1>
                         <hr class="star-light">
-                        <span class="skills">Python Developer - Flask Framework</span>
+                        <span class="skills">Python Developing - Web Developing - Apps</span>
                     </div>
                 </div>
             </div>
@@ -106,33 +106,33 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.chesstastic.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.fairshare-international.org/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/chesstastic.jpeg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="/static/img/fairshare_preview.png" target="_blank" class="img-responsive" alt="Chesstastic">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.siegfried-junginger.de/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
+                        <img src="/static/img/junginger_preview.png" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="http://www.roswitha-prehm.de" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="/static/img/prehm_preview.png" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
