--- a/templates/index.html
+++ b/templates/index.html
@@ -85,8 +85,8 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Welcome to my humble home {{name}}!</h1>
-                        <hr class="star-light">
+                        <h3 class="name">Welcome to my humble home {{name}}!</h3>
+                        <hr>
                         <span class="skills">Python Developing - Web Developing - Apps</span>
                     </div>
                 </div>
@@ -105,6 +105,58 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <a href="https://www.fairshare-international.org/" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/static/img/fairshare_preview.png" target="_blank" class="img-responsive" alt="Chesstastic">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="https://www.siegfried-junginger.de/" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/static/img/junginger_preview.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="http://www.roswitha-prehm.de" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/static/img/prehm_preview.png" class="img-responsive" alt="Circus tent">
+                    </a>
+                </div>      
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="success" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>About</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>I love the Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
+                </div>
+            </div>
+<div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="https://www.fairshare-international.org/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
