--- a/templates/index.html
+++ b/templates/index.html
@@ -106,56 +106,40 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.fairshare-international.org/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="http://ed-yoga.de" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/fairshare_preview.png" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="/static/img/edyoga-preview.png" target="_blank" class="img-responsive" alt="ED-Yoga">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.siegfried-junginger.de/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="http://www.travelandyoga.de" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/junginger_preview.png" class="img-responsive" alt="Slice of cake">
+                        <img src="/static/img/travelyoga_preview.png" class="img-responsive" alt="Travel and Yoga">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="http://www.roswitha-prehm.de" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/tofulogy" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/prehm_preview.png" class="img-responsive" alt="Circus tent">
+                        <img src="/static/img/github.png" class="img-responsive" alt="Github">
                     </a>
                 </div>      
             </div>
         </div>
     </section>
 
-    <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>I love the Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
-                </div>
-            </div>
+    
 <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="https://www.fairshare-international.org/" target="_blank" class="portfolio-link" data-toggle="modal">
