--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h4 class="name">Welcome to my humble home {{name}}!</h4>
+                        <h4>Welcome to my humble home {{name}}!</h4>
                         <hr>
                         <span class="skills">Python Developing - Web Developing - Apps</span>
                     </div>
