--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h4>Welcome to my humble home {{name}}!</h4>
+                        <h3>Welcome to my humble home {{name}}!</h3>
                         <hr>
                         <span class="skills">Python Developing - Web Developing - Apps</span>
                     </div>
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Portfolio<</br><br>/h2>
                     
                 </div>
             </div>
@@ -186,7 +186,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <hr>
                 </div>
             </div>
             <div class="row">
