--- a/templates/index.html
+++ b/templates/index.html
@@ -100,8 +100,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio<</br><br>/h2>
-                    
+                    <h2>Portfolio/h2>
+                    <hr>
                 </div>
             </div>
            
@@ -191,10 +191,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I love the Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
+                    <p>Creating, Designing, and Installing the Web Reference that's presenting your business, person, or passion</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
+                    <p>Apps in Python, PHP, and Javascript. The possibilities are endless, and will help your webs to stand out of everybody else</p>
                 </div>
             </div>
         </div>
