--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio/h2>
+                    <h2>Portfolio</h2>
                     <hr>
                 </div>
             </div>
@@ -194,8 +194,12 @@
                     <p>Creating, Designing, and Installing the Web Reference that's presenting your business, person, or passion</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Apps in Python, PHP, and Javascript. The possibilities are endless, and will help your webs to stand out of everybody else</p>
+                    <p>Dynamic web content delivered by Python, PHP, and Javascript. The possibilities are endless, and will help your webs to stand out of everybody else</p>
                 </div>
+                                <div class="col-lg-4">
+                    <p>Apps for your website, or your customer's smartphone and tablet. Just name it.</p>
+                </div>
+
             </div>
         </div>
     </section>
